--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="canonical" href="/">
   </head>
   <body data-home-page-title="index" class="u-body"><header class="u-clearfix u-grey-5 u-header u-header" id="sec-f410"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="https://thepiratebay-proxy.github.io" class="u-image u-logo u-image-1" data-image-width="525" data-image-height="141">
+        <a href="https://tpb-proxies.curd.io" class="u-image u-logo u-image-1" data-image-width="525" data-image-height="141">
           <img src="/assets/img/tpb.png" class="u-logo-image u-logo-image-1">
         </a>
       </div></header>
@@ -58,14 +58,16 @@
               <tr style="height: 57px;">
                 <td class="u-table-cell">Site</td>
                 <td class="u-table-cell">Country</td>
+                <td class="u-table-cell">ADS</td>
                 <td class="u-table-cell">Status</td>
                 <td class="u-table-cell">Speed</td>
               </tr>
               <tr style="height: 60px;">
                 <td class="u-table-cell">
-                  <a href="https://thepiratebay.unblockninja.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">thepiratebay.unblockninja.com</a>
+                  <a href="https://mirrorbay.org" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">Mirrorbay.org</a>
                 </td>
-                <td class="u-table-cell">NL</td>
+                <td class="u-table-cell">US</td>
+                <td class="u-table-cell">No Ads</td>
                 <td class="u-table-cell"><span class="u-icon u-icon-1"><svg class="u-svg-content" viewBox="0 0 384 384" style="width: 1em; height: 1em;"><path d="m368 192c0 97.203125-78.796875 176-176 176s-176-78.796875-176-176 78.796875-176 176-176 176 78.796875 176 176zm0 0" fill="#4dd0e1"></path><g fill="#012e52"><path d="m356.542969 127.609375c-8.488281 2.480469-13.34375 11.367187-10.863281 19.847656 4.191406 14.328125 6.320312 29.320313 6.320312 44.542969 0 88.222656-71.777344 160-160 160s-160-71.777344-160-160 71.777344-160 160-160c32.0625 0 62.910156 9.375 89.207031 27.105469 7.320313 4.941406 17.273438 3 22.207031-4.320313 4.9375-7.328125 3.011719-17.273437-4.316406-22.210937-31.601562-21.308594-68.632812-32.574219-107.097656-32.574219-105.863281 0-192 86.128906-192 192s86.136719 192 192 192 192-86.128906 192-192c0-18.273438-2.550781-36.28125-7.601562-53.527344-2.488282-8.480468-11.34375-13.359375-19.855469-10.863281zm0 0"></path><path d="m356.6875 36.6875-164.6875 164.679688-52.6875-52.679688c-6.25-6.246094-16.375-6.246094-22.625 0-6.246094 6.25-6.246094 16.375 0 22.625l64 64c3.128906 3.128906 7.214844 4.6875 11.3125 4.6875s8.183594-1.558594 11.3125-4.6875l176-176c6.246094-6.25 6.246094-16.375 0-22.625-6.25-6.246094-16.375-6.246094-22.625 0zm0 0"></path>
 </g></svg><img></span>
                 </td>
@@ -73,33 +75,14 @@
               </tr>
               <tr style="height: 60px;">
                 <td class="u-table-cell">
-                  <a href="https://tpb.proxyninja.org" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">tpb.proxyninja.org</a>
+                  <a href="https://piratebay.pro" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">Piratebay Pro</a>
                 </td>
                 <td class="u-table-cell">UA</td>
+                <td class="u-table-cell">No Ads</td>
                 <td class="u-table-cell"> &nbsp;<span class="u-icon u-icon-2"><svg class="u-svg-content" viewBox="0 0 384 384" style="width: 1em; height: 1em;"><path d="m368 192c0 97.203125-78.796875 176-176 176s-176-78.796875-176-176 78.796875-176 176-176 176 78.796875 176 176zm0 0" fill="#4dd0e1"></path><g fill="#012e52"><path d="m356.542969 127.609375c-8.488281 2.480469-13.34375 11.367187-10.863281 19.847656 4.191406 14.328125 6.320312 29.320313 6.320312 44.542969 0 88.222656-71.777344 160-160 160s-160-71.777344-160-160 71.777344-160 160-160c32.0625 0 62.910156 9.375 89.207031 27.105469 7.320313 4.941406 17.273438 3 22.207031-4.320313 4.9375-7.328125 3.011719-17.273437-4.316406-22.210937-31.601562-21.308594-68.632812-32.574219-107.097656-32.574219-105.863281 0-192 86.128906-192 192s86.136719 192 192 192 192-86.128906 192-192c0-18.273438-2.550781-36.28125-7.601562-53.527344-2.488282-8.480468-11.34375-13.359375-19.855469-10.863281zm0 0"></path><path d="m356.6875 36.6875-164.6875 164.679688-52.6875-52.679688c-6.25-6.246094-16.375-6.246094-22.625 0-6.246094 6.25-6.246094 16.375 0 22.625l64 64c3.128906 3.128906 7.214844 4.6875 11.3125 4.6875s8.183594-1.558594 11.3125-4.6875l176-176c6.246094-6.25 6.246094-16.375 0-22.625-6.25-6.246094-16.375-6.246094-22.625 0zm0 0"></path>
 </g></svg><img></span>&nbsp; 
                 </td>
                 <td class="u-table-cell"> Very Fast</td>
-              </tr>
-              <tr style="height: 60px;">
-                <td class="u-table-cell">
-                  <a href="https://thepiratebay.abcproxy.org" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-3" target="_blank">thepiratebay.abcproxy.org</a>
-                </td>
-                <td class="u-table-cell">AD</td>
-                <td class="u-table-cell"><span class="u-icon u-icon-3"><svg class="u-svg-content" viewBox="0 0 384 384" style="width: 1em; height: 1em;"><path d="m368 192c0 97.203125-78.796875 176-176 176s-176-78.796875-176-176 78.796875-176 176-176 176 78.796875 176 176zm0 0" fill="#4dd0e1"></path><g fill="#012e52"><path d="m356.542969 127.609375c-8.488281 2.480469-13.34375 11.367187-10.863281 19.847656 4.191406 14.328125 6.320312 29.320313 6.320312 44.542969 0 88.222656-71.777344 160-160 160s-160-71.777344-160-160 71.777344-160 160-160c32.0625 0 62.910156 9.375 89.207031 27.105469 7.320313 4.941406 17.273438 3 22.207031-4.320313 4.9375-7.328125 3.011719-17.273437-4.316406-22.210937-31.601562-21.308594-68.632812-32.574219-107.097656-32.574219-105.863281 0-192 86.128906-192 192s86.136719 192 192 192 192-86.128906 192-192c0-18.273438-2.550781-36.28125-7.601562-53.527344-2.488282-8.480468-11.34375-13.359375-19.855469-10.863281zm0 0"></path><path d="m356.6875 36.6875-164.6875 164.679688-52.6875-52.679688c-6.25-6.246094-16.375-6.246094-22.625 0-6.246094 6.25-6.246094 16.375 0 22.625l64 64c3.128906 3.128906 7.214844 4.6875 11.3125 4.6875s8.183594-1.558594 11.3125-4.6875l176-176c6.246094-6.25 6.246094-16.375 0-22.625-6.25-6.246094-16.375-6.246094-22.625 0zm0 0"></path>
-</g></svg><img></span>
-                </td>
-                <td class="u-table-cell">Fast</td>
-              </tr>
-              <tr style="height: 60px;">
-                <td class="u-table-cell">
-                  <a href="https://thepiratebay.torrentsbay.org" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-4" target="_blank">thepiratebay.torrentsbay.org</a>
-                </td>
-                <td class="u-table-cell">SE</td>
-                <td class="u-table-cell"><span class="u-icon u-icon-4"><svg class="u-svg-content" viewBox="0 0 384 384" style="width: 1em; height: 1em;"><path d="m368 192c0 97.203125-78.796875 176-176 176s-176-78.796875-176-176 78.796875-176 176-176 176 78.796875 176 176zm0 0" fill="#4dd0e1"></path><g fill="#012e52"><path d="m356.542969 127.609375c-8.488281 2.480469-13.34375 11.367187-10.863281 19.847656 4.191406 14.328125 6.320312 29.320313 6.320312 44.542969 0 88.222656-71.777344 160-160 160s-160-71.777344-160-160 71.777344-160 160-160c32.0625 0 62.910156 9.375 89.207031 27.105469 7.320313 4.941406 17.273438 3 22.207031-4.320313 4.9375-7.328125 3.011719-17.273437-4.316406-22.210937-31.601562-21.308594-68.632812-32.574219-107.097656-32.574219-105.863281 0-192 86.128906-192 192s86.136719 192 192 192 192-86.128906 192-192c0-18.273438-2.550781-36.28125-7.601562-53.527344-2.488282-8.480468-11.34375-13.359375-19.855469-10.863281zm0 0"></path><path d="m356.6875 36.6875-164.6875 164.679688-52.6875-52.679688c-6.25-6.246094-16.375-6.246094-22.625 0-6.246094 6.25-6.246094 16.375 0 22.625l64 64c3.128906 3.128906 7.214844 4.6875 11.3125 4.6875s8.183594-1.558594 11.3125-4.6875l176-176c6.246094-6.25 6.246094-16.375 0-22.625-6.25-6.246094-16.375-6.246094-22.625 0zm0 0"></path>
-</g></svg><img></span>
-                </td>
-                <td class="u-table-cell">Very Fast</td>
               </tr>
             </tbody>
           </table>
@@ -159,7 +142,6 @@ PirateBay TOR v3 URL: piratebayo3klnzokct3wt5yyxb2vpebbuyjl7m623iaxmqhsd52coid.o
 <b>Via VPN</b></br></br>
 The second method is to use a VPN (virtual private network), which allows the user to connect to Internet servers in other countries that do not strictly comply with copyright laws, through an encrypted tunnel that hides the user's IP address and allows the user to unlock The Pirate Bay.
 </br></br>
-Free VPN for example from ProtonVPN.com
         </p>
 
 <h3 class="u-text u-text-1"> Blocking and censorship</h3>
@@ -304,7 +286,7 @@ Free VPN for example from ProtonVPN.com
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-5d75"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">thepiratebay-proxy.github.io</p>
+        <p class="u-small-text u-text u-text-variant u-text-1">curd.io</p>
       </div></footer>
   </body>
 </html>
