--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
               <tr style="height: 60px;">
                 <td class="u-table-cell">
-                  <a href="https://thepiratebay.isworking.xyz" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">thepiratebay.isworking.xyz</a>
+                  <a href="https://thepiratebay.isonline.cfd" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">thepiratebay.isonline.cfd</a>
                 </td>
                 <td class="u-table-cell">UA</td>
                 <td class="u-table-cell">No Ads</td>
@@ -99,7 +99,7 @@
               </tr>
               <tr style="height: 60px;">
                 <td class="u-table-cell">
-                  <a href="https://thepiratebay.isworking.online" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">thepiratebay.isworking.online</a>
+                  <a href="https://thepiratebay.isonline.click" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">thepiratebay.isonline.click</a>
                 </td>
                 <td class="u-table-cell">UA</td>
                 <td class="u-table-cell">No Ads</td>
@@ -111,7 +111,7 @@
 
               <tr style="height: 60px;">
                 <td class="u-table-cell">
-                  <a href="https://thepiratebay.isworking.site" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">thepiratebay.isworking.site</a>
+                  <a href="https://thepiratebay.isonline.club" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">thepiratebay.isonline.club</a>
                 </td>
                 <td class="u-table-cell">UA</td>
                 <td class="u-table-cell">No Ads</td>
